# poker_probability_calculator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: hand-evaluation-notes.md
src/poker_probability_calculator/: __init__.py  cards.py  cli.py  evaluator.py  odds.py
tests/: test_cli.py  test_evaluator.py  test_odds.py
