[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "poker-probability-calculator"
version = "0.2.0"
description = "CLI and Python package for exact and Monte Carlo poker hand probabilities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Isaac Cavallaro" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9",
  "ruff>=0.11.0,<0.12",
]

[project.scripts]
poker-probability = "poker_probability_calculator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/poker_probability_calculator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
